Models now implement AsList interface that will represent themselves as a 1 item list. (#151)