@@ -1,13 +1,11 @@
 package gov.va.api.health.dstu2.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.dstu2.api.resources.Appointment;
 import gov.va.api.health.dstu2.api.resources.Appointment.Participant;
 import gov.va.api.health.dstu2.api.resources.Appointment.Participant.ParticipantStatus;
 import gov.va.api.health.dstu2.api.resources.Appointment.Participant.RequiredCode;
 import gov.va.api.health.dstu2.api.resources.Appointment.Status;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -22,10 +20,10 @@ public class SampleAppointments {
         .implicitRules("http://HelloRules.com")
         .language("Hello Language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
-        .identifier(singletonList(identifier()))
+        .contained(resource().asList())
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
+        .identifier(identifier().asList())
         .status(Status.proposed)
         .type(dataTypes.codeableConcept())
         .reason(dataTypes.codeableConcept())
@@ -34,16 +32,16 @@ public class SampleAppointments {
         .start("1970-01-01T00:00:00Z")
         .end("1970-01-01T00:00:00Z")
         .minutesDuration(5)
-        .slot(singletonList(dataTypes.reference()))
+        .slot(dataTypes.reference().asList())
         .comment("Comment")
         .participant(
-            singletonList(
-                Participant.builder()
-                    .type(Arrays.asList(dataTypes.codeableConcept(), dataTypes.codeableConcept()))
-                    .actor(dataTypes.reference())
-                    .required(RequiredCode.information_only)
-                    .status(ParticipantStatus.needs_action)
-                    .build()))
+            Participant.builder()
+                .type(List.of(dataTypes.codeableConcept(), dataTypes.codeableConcept()))
+                .actor(dataTypes.reference())
+                .required(RequiredCode.information_only)
+                .status(ParticipantStatus.needs_action)
+                .build()
+                .asList())
         .build();
   }
 }
