@@ -1,11 +1,8 @@
 package gov.va.api.health.dstu2.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.dstu2.api.datatypes.CodeableConcept;
 import gov.va.api.health.dstu2.api.datatypes.Coding;
 import gov.va.api.health.dstu2.api.resources.DiagnosticReport;
-import java.util.Arrays;
 import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
@@ -18,12 +15,12 @@ public class SampleDiagnosticReports {
   private CodeableConcept category() {
     return CodeableConcept.builder()
         .coding(
-            singletonList(
-                Coding.builder()
-                    .system("http://hl7.org/fhir/ValueSet/diagnostic-service-sections")
-                    .code("LAB")
-                    .display("Laboratory")
-                    .build()))
+            Coding.builder()
+                .system("http://hl7.org/fhir/ValueSet/diagnostic-service-sections")
+                .code("LAB")
+                .display("Laboratory")
+                .build()
+                .asList())
         .text("dat category")
         .build();
   }
@@ -33,8 +30,7 @@ public class SampleDiagnosticReports {
   }
 
   private List<Coding> codeCodingList() {
-    return singletonList(
-        Coding.builder().system("http://HelloSystem.com").code("Hello Code").build());
+    return Coding.builder().system("http://HelloSystem.com").code("Hello Code").build().asList();
   }
 
   public DiagnosticReport diagnosticReport() {
@@ -44,11 +40,10 @@ public class SampleDiagnosticReports {
         .implicitRules("https://HelloRules.com")
         .language("Hello Language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
+        .contained(resource().asList())
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(identifier().asList())
         .status(DiagnosticReport.Code._final)
         .category(category())
         .code(codeCodeableConcept())
@@ -58,8 +53,8 @@ public class SampleDiagnosticReports {
         .issued("2013-06-21T19:03:16Z")
         .performer(reference())
         .conclusion("The end.")
-        .codedDiagnosis(Arrays.asList(codeableConcept(), codeableConcept()))
-        .presentedForm(Arrays.asList(attachment(), attachment()))
+        .codedDiagnosis(List.of(codeableConcept(), codeableConcept()))
+        .presentedForm(List.of(attachment(), attachment()))
         .build();
   }
 }
