@@ -1,10 +1,8 @@
 package gov.va.api.health.dstu2.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.dstu2.api.datatypes.CodeableConcept;
 import gov.va.api.health.dstu2.api.resources.Medication;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -16,40 +14,40 @@ public class SampleMedications {
   public Medication.Batch batch() {
     return Medication.Batch.builder()
         .id("8888")
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
         .lotNumber("10")
         .expirationDate("2000-01-01T00:00:00-00:00")
         .build();
   }
 
   public CodeableConcept code() {
-    return CodeableConcept.builder().coding(singletonList(coding())).text("HelloText").build();
+    return CodeableConcept.builder().coding(coding().asList()).text("HelloText").build();
   }
 
   public CodeableConcept container() {
-    return CodeableConcept.builder().coding(singletonList(coding())).text("HelloText").build();
+    return CodeableConcept.builder().coding(coding().asList()).text("HelloText").build();
   }
 
   public Medication.Content content() {
     return Medication.Content.builder()
         .id("8888")
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
         .item(reference())
         .amount(simpleQuantity())
         .build();
   }
 
   public CodeableConcept form() {
-    return CodeableConcept.builder().coding(singletonList(coding())).text("HelloText").build();
+    return CodeableConcept.builder().coding(coding().asList()).text("HelloText").build();
   }
 
   public Medication.Ingredient ingredient() {
     return Medication.Ingredient.builder()
         .id("8888")
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
         .item(reference())
         .amount(ratio())
         .build();
@@ -62,10 +60,9 @@ public class SampleMedications {
         .implicitRules("http://HelloRules.com")
         .language("Hello Language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .contained(resource().asList())
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
         .code(code())
         .isBrand(true)
         .manufacturer(reference())
@@ -77,21 +74,21 @@ public class SampleMedications {
   public Medication.MedicationPackage medicationPackage() {
     return Medication.MedicationPackage.builder()
         .id("8888")
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
         .container(container())
-        .content(singletonList(content()))
+        .content(content().asList())
         .build();
   }
 
   public Medication.Product product() {
     return Medication.Product.builder()
         .id("8888")
-        .extension(singletonList(extension()))
-        .modifierExtension(singletonList(extension()))
+        .extension(extension().asList())
+        .modifierExtension(extension().asList())
         .form(form())
         .ingredient(ingredient())
-        .batch(singletonList(batch()))
+        .batch(batch().asList())
         .build();
   }
 }
