@@ -1,12 +1,9 @@
 package gov.va.api.health.dstu2.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.dstu2.api.resources.Procedure;
 import gov.va.api.health.dstu2.api.resources.Procedure.FocalDevice;
 import gov.va.api.health.dstu2.api.resources.Procedure.Status;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -17,8 +14,8 @@ public class SampleProcedures {
   private FocalDevice focalDevice() {
     return Procedure.FocalDevice.builder()
         .id("2468")
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(Arrays.asList(extension(), extension()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extension()))
         .action(codeableConcept())
         .manipulated(reference())
         .build();
@@ -27,8 +24,8 @@ public class SampleProcedures {
   Procedure.Performer performer() {
     return Procedure.Performer.builder()
         .id("9876")
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(Arrays.asList(extension(), extension()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extension()))
         .actor(reference())
         .role(codeableConcept())
         .build();
@@ -41,29 +38,28 @@ public class SampleProcedures {
         .implicitRules("http://HelloRules.com")
         .language("Hello Language")
         .text(narrative())
-        .contained(Collections.singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
+        .contained(resource().asList())
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(identifier().asList())
         .subject(reference())
         .status(Status.in_progress)
         .category(codeableConcept())
         .code(codeableConcept())
         .notPerformed(false)
-        .reasonNotPerformed(Arrays.asList(codeableConcept(), codeableConcept()))
-        .bodySite(Arrays.asList(codeableConcept(), codeableConcept()))
+        .reasonNotPerformed(List.of(codeableConcept(), codeableConcept()))
+        .bodySite(List.of(codeableConcept(), codeableConcept()))
         .reasonCodeableConcept(codeableConcept())
-        .performer(Arrays.asList(performer(), performer()))
+        .performer(List.of(performer(), performer()))
         .performedDateTime("2000-01-01T00:00:00-00:00")
         .encounter(reference())
         .location(reference())
         .outcome(codeableConcept())
-        .complication(Arrays.asList(codeableConcept(), codeableConcept()))
-        .followUp(Arrays.asList(codeableConcept(), codeableConcept()))
+        .complication(List.of(codeableConcept(), codeableConcept()))
+        .followUp(List.of(codeableConcept(), codeableConcept()))
         .request(reference())
-        .notes(Arrays.asList(annotation(), annotation()))
-        .focalDevice(Collections.singletonList(focalDevice()))
+        .notes(List.of(annotation(), annotation()))
+        .focalDevice(focalDevice().asList())
         .build();
   }
 }
