@@ -1,9 +1,7 @@
 package gov.va.api.health.r4.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.r4.api.resources.Schedule;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -18,16 +16,15 @@ public class SampleSchedules {
         .implicitRules("https://HelloRules.com")
         .language("Hello language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
+        .contained(List.of(resource()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(List.of(identifier()))
         .active(true)
-        .serviceCategory(singletonList(codeableConcept()))
-        .serviceType(singletonList(codeableConcept()))
-        .specialty(singletonList(codeableConcept()))
-        .actor(singletonList(reference()))
+        .serviceCategory(List.of(codeableConcept()))
+        .serviceType(List.of(codeableConcept()))
+        .specialty(List.of(codeableConcept()))
+        .actor(List.of(reference()))
         .planningHorizon(period())
         .comment("comment")
         .build();
