@@ -1,12 +1,10 @@
 package gov.va.api.health.r4.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.r4.api.resources.ServiceRequest;
 import gov.va.api.health.r4.api.resources.ServiceRequest.Intent;
 import gov.va.api.health.r4.api.resources.ServiceRequest.Priority;
 import gov.va.api.health.r4.api.resources.ServiceRequest.Status;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -21,23 +19,22 @@ public class SampleServiceRequests {
         .implicitRules("https://HelloRules.com")
         .language("Hello language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
-        .instantiatesCanonical(singletonList("canonical"))
-        .instantiatesUri(singletonList("uri"))
-        .basedOn(singletonList(reference()))
-        .replaces(singletonList(reference()))
+        .contained(List.of(resource()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(List.of(identifier()))
+        .instantiatesCanonical(List.of("canonical"))
+        .instantiatesUri(List.of("uri"))
+        .basedOn(List.of(reference()))
+        .replaces(List.of(reference()))
         .requisition(identifier())
         .status(Status.active)
         .intent(Intent.plan)
-        .category(singletonList(codeableConcept()))
+        .category(List.of(codeableConcept()))
         .priority(Priority.asap)
         .doNotPerform(false)
         .code(codeableConcept())
-        .orderDetail(singletonList(codeableConcept()))
+        .orderDetail(List.of(codeableConcept()))
         .quantityQuantity(quantity())
         .subject(reference())
         .encounter(reference())
@@ -46,18 +43,18 @@ public class SampleServiceRequests {
         .authoredOn("2015-02-07T13:28:17-05:00")
         .requester(reference())
         .performerType(codeableConcept())
-        .performer(singletonList(reference()))
-        .locationCode(singletonList(codeableConcept()))
-        .locationReference(singletonList(reference()))
-        .reasonCode(singletonList(codeableConcept()))
-        .reasonReference(singletonList(reference()))
-        .insurance(singletonList(reference()))
-        .supportingInfo(singletonList(reference()))
-        .specimen(singletonList(reference()))
-        .bodySite(singletonList(codeableConcept()))
-        .note(singletonList(annotation()))
+        .performer(List.of(reference()))
+        .locationCode(List.of(codeableConcept()))
+        .locationReference(List.of(reference()))
+        .reasonCode(List.of(codeableConcept()))
+        .reasonReference(List.of(reference()))
+        .insurance(List.of(reference()))
+        .supportingInfo(List.of(reference()))
+        .specimen(List.of(reference()))
+        .bodySite(List.of(codeableConcept()))
+        .note(List.of(annotation()))
         .patientInstruction("patient instruction")
-        .relevantHistory(singletonList(reference()))
+        .relevantHistory(List.of(reference()))
         .build();
   }
 }
