@@ -1,10 +1,8 @@
 package gov.va.api.health.r4.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.r4.api.resources.Slot;
 import gov.va.api.health.r4.api.resources.Slot.Status;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -19,14 +17,13 @@ public class SampleSlots {
         .implicitRules("https://HelloRules.com")
         .language("Hello language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
-        .serviceCategory(singletonList(codeableConcept()))
-        .serviceType(singletonList(codeableConcept()))
-        .specialty(singletonList(codeableConcept()))
+        .contained(List.of(resource()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(List.of(identifier()))
+        .serviceCategory(List.of(codeableConcept()))
+        .serviceType(List.of(codeableConcept()))
+        .specialty(List.of(codeableConcept()))
         .appointmentType(codeableConcept())
         .schedule(reference())
         .status(Status.busy)
