@@ -1,14 +1,12 @@
 package gov.va.api.health.r4.api.samples;
 
-import static java.util.Collections.singletonList;
-
 import gov.va.api.health.r4.api.resources.Patient;
 import gov.va.api.health.r4.api.resources.Patient.Communication;
 import gov.va.api.health.r4.api.resources.Patient.Gender;
 import gov.va.api.health.r4.api.resources.Patient.Link;
 import gov.va.api.health.r4.api.resources.Patient.PatientContact;
 import gov.va.api.health.r4.api.resources.Patient.Type;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -31,34 +29,33 @@ public class SamplePatients {
         .implicitRules("https://HelloRules.com")
         .language("Hello language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(usCoreEthnicityExtension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
+        .contained(List.of(resource()))
+        .extension(List.of(usCoreEthnicityExtension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(identifier().asList())
         .active(true)
-        .name(singletonList(humanName()))
-        .telecom(singletonList(contactPoint()))
+        .name(humanName().asList())
+        .telecom(contactPoint().asList())
         .gender(Gender.unknown)
         .birthDate("2000-01-01")
         .deceasedBoolean(true)
-        .address(singletonList(address()))
+        .address(address().asList())
         .maritalStatus(codeableConcept())
         .multipleBirthInteger(2)
-        .photo(singletonList(attachment()))
-        .contact(singletonList(patientContact()))
-        .communication(singletonList(communication()))
-        .generalPractitioner(singletonList(reference()))
+        .photo(attachment().asList())
+        .contact(patientContact().asList())
+        .communication(communication().asList())
+        .generalPractitioner(reference().asList())
         .managingOrganization(reference())
-        .link(singletonList(link()))
+        .link(link().asList())
         .build();
   }
 
   public PatientContact patientContact() {
     return PatientContact.builder()
-        .relationship(singletonList(codeableConcept()))
+        .relationship(codeableConcept().asList())
         .name(humanName())
-        .telecom(singletonList(contactPoint()))
+        .telecom(contactPoint().asList())
         .address(address())
         .gender(Gender.unknown)
         .organization(reference())
