@@ -1,11 +1,10 @@
 package gov.va.api.health.r4.api.samples;
 
 import static gov.va.api.health.r4.api.resources.RelatedPerson.Gender.male;
-import static java.util.Collections.singletonList;
 
 import gov.va.api.health.r4.api.resources.RelatedPerson;
 import gov.va.api.health.r4.api.resources.RelatedPerson.Communication;
-import java.util.Arrays;
+import java.util.List;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Delegate;
 
@@ -24,22 +23,21 @@ public class SampleRelatedPersons {
         .implicitRules("https://HelloRules.com")
         .language("Hello language")
         .text(narrative())
-        .contained(singletonList(resource()))
-        .extension(Arrays.asList(extension(), extension()))
-        .modifierExtension(
-            Arrays.asList(extension(), extensionWithQuantity(), extensionWithRatio()))
-        .identifier(singletonList(identifier()))
+        .contained(List.of(resource()))
+        .extension(List.of(extension(), extension()))
+        .modifierExtension(List.of(extension(), extensionWithQuantity(), extensionWithRatio()))
+        .identifier(identifier().asList())
         .active(true)
         .patient(reference())
-        .relationship(singletonList(codeableConcept()))
-        .name(singletonList(humanName()))
-        .telecom(singletonList(contactPoint()))
+        .relationship(codeableConcept().asList())
+        .name(humanName().asList())
+        .telecom(contactPoint().asList())
         .gender(male)
         .birthDate("1998-09-10")
-        .address(singletonList(address()))
-        .photo(singletonList(attachment()))
+        .address(address().asList())
+        .photo(attachment().asList())
         .period(period())
-        .communication(singletonList(communication()))
+        .communication(communication().asList())
         .build();
   }
 }
